Minor fix description in pandas basics

--- a/notebooks/01 - pandas basics.ipynb
+++ b/notebooks/01 - pandas basics.ipynb
@@ -13,7 +13,7 @@
     "- Inspecting the data\n",
     "- Data selection\n",
     "- Data transformation\n",
-    "- Sorting"
+    "- Sorting values"
    ]
   },
   {
