Improve description of dataset in pandas basics

--- a/notebooks/01 - pandas basics.ipynb
+++ b/notebooks/01 - pandas basics.ipynb
@@ -9,11 +9,42 @@
     "In this notebook:\n",
     "\n",
     "- pandas data structures\n",
+    "- Description of the data\n",
     "- Loading data from CSV\n",
     "- Inspecting the data\n",
     "- Data selection\n",
     "- Data transformation\n",
-    "- Sorting values"
+    "- Sorting values\n",
+    "\n",
+    "## pandas data structures\n",
+    "\n",
+    "We'll work with two main data structures offered by pandas:\n",
+    "\n",
+    "- `Series`, an array-like data structure\n",
+    "- `DataFrame`, a table-like data structure\n",
+    "\n",
+    "## Description of the data\n",
+    "\n",
+    "We'll perform some analysis on a (semi-)randomly generated data set of clients and transactions (people buying stuff at a fake store).\n",
+    "\n",
+    "There are two tables: `clients` and `transactions`.\n",
+    "\n",
+    "Attributes of `clients`:\n",
+    "\n",
+    "- `client_id`: unique number identifying the client\n",
+    "- `name`: string representing the full (fake) name of the client\n",
+    "- `date_of_birth`: datetime object representing the date of birth\n",
+    "- `city`: string representing the location of the client \n",
+    "\n",
+    "Attributes of `transactions`:\n",
+    "\n",
+    "- `transaction_id`: unique number identifying the transaction\n",
+    "- `client_id`: id of the client associated with the transaction\n",
+    "- `date`: datetime object representing the date of the transaction\n",
+    "- `product`: string representing the specific product being purchased\n",
+    "- `quantity`: number of items purchased for the specific product\n",
+    "- `unit_price`: number representing the price of a single unit for the specific product\n",
+    "- `total`: unit price times quantity for the specific product"
    ]
   },
   {
