Add solutions for the exercises on pandas basics

--- a/notebooks/01.2 - Solutions for the exercises on pandas basics.ipynb
+++ b/notebooks/01.2 - Solutions for the exercises on pandas basics.ipynb
@@ -4,16 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Exercises on pandas basics\n",
+    "## Solutions for the exercises on pandas basics\n",
     "\n",
-    "This notebooks contains some exercises to practice the concepts learned in the notebook [01 - pandas basics](01%20-%20pandas%20basics.ipynb).\n",
-    "\n",
-    "#### Instructions & suggestions\n",
-    "\n",
-    "- Run the first cell below these instructions to load the data\n",
-    "- Each question can be answered using concepts from the notebook [01 - pandas basics](01%20-%20pandas%20basics.ipynb), no extra pandas knowledge required\n",
-    "- For more complex questions, you can iteratively build your solution starting from the simpler pieces \n",
-    "- There are enough questions to go overtime, feel free to take some of them home"
+    "This notebooks contains the proposed solutions for the exercises listed in the notebook [01.1 - Exercises on pandas basics](01.1%20-%20Exercises%20on%20pandas%20basics.ipynb)."
    ]
   },
   {
@@ -43,7 +36,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "len(clients)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -57,7 +52,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "len(clients['city'].unique())"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -71,7 +68,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "clients[['name', 'city']]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -85,7 +84,21 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# This shows only one person\n",
+    "# If more people are \"the youngest\" (i.e. sharing the birthday), only one will be shown\n",
+    "clients.sort_values(by='date_of_birth', ascending=False).head(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# This can show more than one person if several people are \"the youngest\" (i.e. sharing the birthday)\n",
+    "clients[clients['date_of_birth'] == clients['date_of_birth'].max()]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -99,7 +112,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Similar to the above, if more people are sharing the birthday\n",
+    "clients.sort_values(by='date_of_birth').head(3)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -113,7 +129,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "clients[clients['city'] == 'Clarkechester']"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -127,7 +145,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "clients[clients['city'] == 'Clarkechester'].sort_values(by='name')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -141,7 +161,12 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from_1990 = clients['date_of_birth'].dt.year >= 1990\n",
+    "to_1995 = clients['date_of_birth'].dt.year <= 1995\n",
+    "\n",
+    "clients[from_1990 & to_1995]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -152,7 +177,8 @@
     "Hints:\n",
     "- `datetime.today()` returns a datetime object with the current date\n",
     "- Use `pandas.notnull()` to check that the date of birth is not null\n",
-    "- Consider the person's birthday for this year too"
+    "- If the date of birth is null, return a `None` value for the age\n",
+    "- Consider the person's birthday for this year too!"
    ]
   },
   {
@@ -162,7 +188,18 @@
    "outputs": [],
    "source": [
     "from datetime import datetime\n",
-    "\n"
+    "\n",
+    "def person_age(birthday):\n",
+    "    age = None\n",
+    "    if pd.notnull(birthday):\n",
+    "        today = datetime.today()\n",
+    "        age = today.year - birthday.year\n",
+    "        if today > datetime(today.year, birthday.month, birthday.day):\n",
+    "            age -= 1\n",
+    "    return age\n",
+    "    \n",
+    "clients['age'] = clients['date_of_birth'].apply(person_age)\n",
+    "clients.head()"
    ]
   },
   {
@@ -177,7 +214,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "clients[clients['city'] == 'Clarkechester']['age'].mean()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -191,7 +230,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "transactions[transactions['client_id'] == 1]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -205,7 +246,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "len(transactions[transactions['client_id'] == 1]['transaction_id'].unique())"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -219,7 +262,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "transactions[transactions['client_id'] == 1]['quantity'].sum()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -233,7 +278,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "transactions[transactions['transaction_id'] == 1].sort_values(by='unit_price', ascending=False)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -247,7 +294,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "transactions[transactions['transaction_id'] == 1].sort_values(by='total')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -261,7 +310,22 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# This shows only one person\n",
+    "clients[clients['city'] == 'West Timothybury'].sort_values('date_of_birth', ascending=False).head(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# If several people share the birthday, show all of them\n",
+    "clients_from_wt = clients[clients['city'] == 'West Timothybury']\n",
+    "\n",
+    "clients_from_wt[clients_from_wt['date_of_birth'] == clients_from_wt['date_of_birth'].max()]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -275,7 +339,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "len(transactions['date'].unique())"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -289,7 +355,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "clients['city'].value_counts()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -303,13 +371,24 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "clients[clients['city'] == 'West Timothybury'].sort_values(by='date_of_birth', ascending=False)"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "### What's the average number of different items purchased per transaction?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "transactions['transaction_id'].value_counts().mean()"
    ]
   },
   {
