--- a/notebooks/01 - pandas basics.ipynb
+++ b/notebooks/01 - pandas basics.ipynb
@@ -23,6 +23,11 @@
     "- `Series`, an array-like data structure\n",
     "- `DataFrame`, a table-like data structure\n",
     "\n",
+    "You can create `Series` and `DataFrame` objects by passing the desired values explicitly, e.g. passing a list for a `Series` and a dictionary in the format `{'column': [list of values]}` for a `DataFrame` .\n",
+    "\n",
+    "pandas also offers some helper functions to load data from specific formats, e.g. `read_csv()`.\n",
+    "\n",
+    "\n",
     "## Description of the data\n",
     "\n",
     "We'll perform some analysis on a (semi-)randomly generated data set of clients and transactions (people buying stuff at a fake store).\n",
