Tweaks to pandas basics notebook addressing beginner feedback

--- a/notebooks/01 - pandas basics.ipynb
+++ b/notebooks/01 - pandas basics.ipynb
@@ -4,35 +4,51 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# pandas basics\n",
+    "# Pandas Basics\n",
     "\n",
-    "In this notebook:\n",
+    "[*Pandas*](http://pandas.pydata.org/) is a popular data science tool for managing, manipulating and analyzing column-oriented data."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In this notebook, we will cover:\n",
     "\n",
-    "- pandas data structures\n",
+    "- Pandas data structures\n",
     "- Description of the data\n",
     "- Loading data from CSV\n",
     "- Inspecting the data\n",
-    "- Data selection\n",
+    "- Data selection and filtering\n",
     "- Data transformation\n",
     "- Sorting values\n",
     "\n",
-    "## pandas data structures\n",
+    "## 1. Pandas data structures\n",
     "\n",
-    "We'll work with two main data structures offered by pandas:\n",
+    "We'll work with two main [data structures](https://en.wikipedia.org/wiki/Data_structure) offered by pandas:\n",
     "\n",
-    "- `Series`, an array-like data structure\n",
-    "- `DataFrame`, a table-like data structure\n",
+    "- `Series`, an array-like (1-dimensional) data structure\n",
+    "- `DataFrame`, a table-like (2-dimensional) data structure\n",
     "\n",
     "You can create `Series` and `DataFrame` objects by passing the desired values explicitly, e.g. passing a list for a `Series` and a dictionary in the format `{'column': [list of values]}` for a `DataFrame` .\n",
     "\n",
-    "pandas also offers some helper functions to load data from specific formats, e.g. `read_csv()`.\n",
+    "Pandas also offers some helper functions to load data from specific formats, e.g. `read_csv()`.\n",
     "\n",
     "\n",
-    "## Description of the data\n",
+    "## 2. Description of the data\n",
     "\n",
-    "We'll perform some analysis on a (semi-)randomly generated data set of clients and transactions (people buying stuff at a fake store).\n",
+    "In the next couple notebooks, we'll perform some analysis on a (semi-)randomly generated data set of clients and transactions (people buying stuff at a fake store).\n",
     "\n",
-    "There are two tables: `clients` and `transactions`.\n",
+    "There are two tables that we will load into pandas DataFrames: `clients` and `transactions`.\n",
     "\n",
     "Attributes of `clients`:\n",
     "\n",
@@ -58,8 +74,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "\n",
     "clients_file = '../data/fake_shop/fake_clients.csv'\n",
     "transactions_file = '../data/fake_shop/fake_transactions.csv'"
    ]
@@ -68,11 +82,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Loading Data From CSV\n",
+    "## 3. Loading Data From CSV\n",
     "\n",
     "The function `pandas.read_csv()` can be used to load a CSV file into a pandas `DataFrame`.\n",
     "\n",
-    "Other file formats are supported out of the box by pandas: https://pandas.pydata.org/pandas-docs/stable/user_guide/io.html"
+    "Pandas also supports other file formats out of the box: https://pandas.pydata.org/pandas-docs/stable/user_guide/io.html"
    ]
   },
   {
@@ -89,9 +103,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### A Note About the `read_csv()` function\n",
+    "#### A Note About the `read_csv()` function\n",
     "\n",
-    "The `pandas.read_csv()` function takes a several optional arguments to customise the way we load the file.\n",
+    "The `pandas.read_csv()` function takes several optional arguments to customise the way we load the file.\n",
     "\n",
     "e.g. in the example above, we're using `parse_dates` to specify which columns should be trated as `datetime` objects rather than plain strings.\n",
     "\n",
@@ -102,7 +116,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Inspecting the `DataFrame`\n",
+    "## 4. Inspecting the `DataFrame`\n",
     "\n",
     "Instead of printing out the whole `DataFrame`, we can inspect the first few records using `head()`.\n",
     "\n",
@@ -223,6 +237,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "You may notice from the result of running `info()` above that the [dtype](https://pbpython.com/pandas_dtypes.html) of the date column is an object instead of a datetime. This is because Pandas thinks it is a string instead of a date. This is bad not just from an efficiency standpoint, and also because you wouldn't be able to do datetime operations on that column (eg: comparing if it's earlier or later vs another date). It is good practice to process the data to fix this as soon as you load the data!\n",
+    "\n",
     "#### Exercise\n",
     "\n",
     "Reload the transactions file, making sure that the column `date` is parsed as `datetime` object."
@@ -238,12 +254,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If you are having trouble, recall the discussion earlier in this notebook about how `read_csv()` takes optional arguments to customise the way we load the file.\n",
+    "\n",
+    "Or reveal the solution below:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# or load the proposed solution\n",
+    "# when you run this cell, the cell's contents will be replaced by the solution! MAGIC!\n",
     "%load ../solutions/01-transactions-parse-dates.py"
    ]
   },
@@ -348,9 +373,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Data Selection and Filtering\n",
+    "## 5. Data Selection and Filtering\n",
     "\n",
-    "This section discusses different options for data selection.\n",
+    "This section discusses different options to select partial subsets of your data.\n",
     "\n",
     "### Select records by row label"
    ]
@@ -447,7 +472,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# or load the proposed solution\n",
+    "# or load the proposed solution by running this cell\n",
     "%load ../solutions/01-transactions-describe.py"
    ]
   },
@@ -464,7 +489,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "transactions.loc[0:3, ['product', 'total']]"
+    "transactions.loc[0:3, ['product', 'total']]  # select by both rows and columns at the same time"
    ]
   },
   {
@@ -505,13 +530,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can combine multiple conditions with the bitwise operators:\n",
+    "We can combine multiple conditions with *bitwise operators*:\n",
     "\n",
     "- `&` instead of `and`\n",
     "- `|` instead of `or`\n",
     "- `~` instead o `not`\n",
     "\n",
-    "Note: the Python boolean operators `and`, `or` and `not` work on values that can be considered `True` or `False`. For a pandas `Series`, the truth value is ambiguous, hence bitwise operators are used."
+    "Note: the Python boolean operators `and`, `or` and `not` work on values that can be considered `True` or `False`. For a pandas `Series`, the truth value is ambiguous, hence *bitwise operators* are used."
    ]
   },
   {
@@ -527,7 +552,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Note**: the round brackets around each `(condition)` are required because the bitwise operators have high priority, so we need to force the order of operations.\n",
+    "**Note**: the round brackets around each `(condition)` are required because *bitwise operators* have high priority, so we need to force the order of operations.\n",
     "\n",
     "**Tip**: when a condition is complex or difficult to read, we can break it down to improve readability.\n",
     "\n",
@@ -552,7 +577,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Data transformations\n",
+    "## 6. Data transformations\n",
     "\n",
     "### Arithmetic operations\n",
     "\n",
@@ -720,7 +745,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Sorting Values\n",
+    "## 7. Sorting Values\n",
     "\n",
     "The `sort_values()` function sorts by value.\n",
     "\n",
