fix Pandas -> pandas

--- a/notebooks/01 - pandas basics.ipynb
+++ b/notebooks/01 - pandas basics.ipynb
@@ -4,9 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Pandas Basics\n",
+    "# pandas Basics\n",
     "\n",
-    "[*Pandas*](http://pandas.pydata.org/) is a popular data science tool for managing, manipulating and analyzing column-oriented data."
+    "[*pandas*](http://pandas.pydata.org/) is a popular data science tool for managing, manipulating and analyzing column-oriented data."
    ]
   },
   {
@@ -24,7 +24,7 @@
    "source": [
     "In this notebook, we will cover:\n",
     "\n",
-    "- Pandas data structures\n",
+    "- pandas data structures\n",
     "- Description of the data\n",
     "- Loading data from CSV\n",
     "- Inspecting the data\n",
@@ -32,7 +32,7 @@
     "- Data transformation\n",
     "- Sorting values\n",
     "\n",
-    "## 1. Pandas data structures\n",
+    "## 1. pandas data structures\n",
     "\n",
     "We'll work with two main [data structures](https://en.wikipedia.org/wiki/Data_structure) offered by pandas:\n",
     "\n",
@@ -41,7 +41,7 @@
     "\n",
     "You can create `Series` and `DataFrame` objects by passing the desired values explicitly, e.g. passing a list for a `Series` and a dictionary in the format `{'column': [list of values]}` for a `DataFrame` .\n",
     "\n",
-    "Pandas also offers some helper functions to load data from specific formats, e.g. `read_csv()`.\n",
+    "pandas also offers some helper functions to load data from specific formats, e.g. `read_csv()`.\n",
     "\n",
     "\n",
     "## 2. Description of the data\n",
@@ -86,7 +86,7 @@
     "\n",
     "The function `pandas.read_csv()` can be used to load a CSV file into a pandas `DataFrame`.\n",
     "\n",
-    "Pandas also supports other file formats out of the box: https://pandas.pydata.org/pandas-docs/stable/user_guide/io.html"
+    "pandas also supports other file formats out of the box: https://pandas.pydata.org/pandas-docs/stable/user_guide/io.html"
    ]
   },
   {
@@ -237,7 +237,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You may notice from the result of running `info()` above that the [dtype](https://pbpython.com/pandas_dtypes.html) of the date column is an object instead of a datetime. This is because Pandas thinks it is a string instead of a date. This is bad not just from an efficiency standpoint, and also because you wouldn't be able to do datetime operations on that column (eg: comparing if it's earlier or later vs another date). It is good practice to process the data to fix this as soon as you load the data!\n",
+    "You may notice from the result of running `info()` above that the [dtype](https://pbpython.com/pandas_dtypes.html) of the date column is an object instead of a datetime. This is because pandas thinks it is a string instead of a date. This is bad not just from an efficiency standpoint, and also because you wouldn't be able to do datetime operations on that column (eg: comparing if it's earlier or later vs another date). It is good practice to process the data and fix this as early on as possible!\n",
     "\n",
     "#### Exercise\n",
     "\n",
