Add reference to editing mode

--- a/notebooks/00.1 Preliminaries - Using Jupyter notebooks.ipynb
+++ b/notebooks/00.1 Preliminaries - Using Jupyter notebooks.ipynb
@@ -240,6 +240,8 @@
     "\n",
     "After pressing `Esc`, the active code cell will show a blue border (as opposed to the green border) and will be able to accept keyboard commands.\n",
     "\n",
+    "To go back to \"Editing mode\", either press \"Enter\" or click in the middle of a cell (the cell border will turn green).\n",
+    "\n",
     "- `Esc+M`: change cell type to Markdown\n",
     "- `Esc+Y`: change cell type to code\n",
     "\n",
